--- a/src/app.css
+++ b/src/app.css
@@ -6,8 +6,10 @@
 }
 
 #app {
-    border: 1px solid #00000025;
-    border-radius: 4px;
-    padding: 12px;
-    margin: 5px;
+    > div {
+        border: 1px solid #00000025;
+        border-radius: 4px;
+        padding: 12px;
+        margin: 12px;
+    }
 }
